refactor database connection and migration
