# app/handler/accounts.go
@@ -7,7 +7,7 @@ import "github.com/gofiber/fiber/v2"
 // @Tags         accounts
 // @Accept       json
 // @Produce      json
-// @Success      200  {array}  model.Account
+// @Success      200  {array}  models.Account
 // @Router       /accounts [get]
 func GetAccounts(c *fiber.Ctx) error {
 	return c.SendString("/accounts")
@@ -20,7 +20,7 @@ func GetAccounts(c *fiber.Ctx) error {
 // @Accept       json
 // @Produce      json
 // @Param        id   path      int  true  "Account ID"
-// @Success      200  {object}  model.Account
+// @Success      200  {object}  models.Account
 // @Router       /accounts/{id} [get]
 func GetAccount(c *fiber.Ctx) error {
 	return c.SendString("/accounts/:id")
